PLS-13538 size limit now 15em then truncation occurs, and also fixed display when not in edit mode.  In addition, i fixed a problem with Transaction showing 'Month(s)' after CmpValue 'ever'

--- a/le-ui/projects/common/app/directives/chips-directive.scss
+++ b/le-ui/projects/common/app/directives/chips-directive.scss
@@ -16,6 +16,12 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            span {
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                max-width: 15em;
+                overflow: hidden;
+            }
         }
         .chip {
             width: auto;
